// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transpile fetch-request > produces ASL Task for fetch GET 1`] = `
{
  "StartAt": "invoke_1",
  "States": {
    "invoke_1": {
      "End": true,
      "Parameters": {
        "ApiEndpoint.$": "$.endpoint",
        "Method": "GET",
      },
      "Resource": "arn:aws:states:::http:invoke",
      "ResultPath": "$.invoke_1Result",
      "Retry": [
        {
          "BackoffRate": 2,
          "ErrorEquals": [
            "States.ALL",
          ],
          "IntervalSeconds": 1,
          "MaxAttempts": 3,
        },
      ],
      "Type": "Task",
    },
  },
}
`;

exports[`transpile fetch-request > produces ASL Task for fetch POST with body 1`] = `
{
  "StartAt": "invoke_1",
  "States": {
    "invoke_1": {
      "End": true,
      "Parameters": {
        "ApiEndpoint.$": "$.apiUrl",
        "Headers": {
          "Content-Type": "application/json",
        },
        "Method": "POST",
        "RequestBody.$": "$.payload",
      },
      "Resource": "arn:aws:states:::http:invoke",
      "ResultPath": "$.invoke_1Result",
      "Retry": [
        {
          "BackoffRate": 2,
          "ErrorEquals": [
            "States.ALL",
          ],
          "IntervalSeconds": 1,
          "MaxAttempts": 3,
        },
      ],
      "Type": "Task",
    },
  },
}
`;

exports[`transpile fetch-request > uses OutputPath for terminal fetch json 1`] = `
{
  "StartAt": "invoke_1",
  "States": {
    "invoke_1": {
      "End": true,
      "OutputPath": "$.ResponseBody",
      "Parameters": {
        "ApiEndpoint.$": "$.endpoint",
        "Method": "GET",
      },
      "Resource": "arn:aws:states:::http:invoke",
      "Retry": [
        {
          "BackoffRate": 2,
          "ErrorEquals": [
            "States.ALL",
          ],
          "IntervalSeconds": 1,
          "MaxAttempts": 3,
        },
      ],
      "Type": "Task",
    },
  },
}
`;
